--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-form-data": "^2.0.1",
+    "express-formidable": "^1.0.0",
     "express-session": "^1.15.6",
     "jade": "^1.11.0",
     "method-override": "^2.3.10",
-    "mongoose": "^4.13.0"
+    "mongoose": "^4.13.0",
+    "socket.io": "^2.0.4"
   }
 }
